[MODFIN-433]. Include totals without expense class for expense-classes-totals (#302)
* [MODFIN-433]. Include totals without expense class for expense-classes-totals

* [MODFIN-433]. Fix formatting in GroupsApi